[EXPERIMENT] Do not use!
This is just an experiment aat this point and not ready for general usage.

This commit adds a new agent and server side enablement. The agent currently
sends heartbeats for a runner and allows users to create remote shells via
the GARM server in a hub-and-spoke architecture.

The agent connects to GARM and sets up a persistent websocket connection. Using
that connection, GARM can then wait for user connections on a websocket endpoint,
request a shell from the agent on behalf of the user, and multiplex that shell
over the websocket connection, then proxy data packets between the user connection
and the agent shell.

The implementation is basic and needs a lot more checks and mechanisms to ensure
proper cleanup is done when a connection is dropped on either side.
